[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Motorcycle/MotorcycleEnemy.png" type="Texture" id=1]
[ext_resource path="res://Assets/Motorcycle/Wheel.png" type="Texture" id=2]
[ext_resource path="res://Assets/big_pixel/Big Pixel demo.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/MotorcycleSoldier.gd" type="Script" id=4]
[ext_resource path="res://Assets/Audio/BeefyBoltActionRifle.mp3" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 19.5 )

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="MotorcycleSoldier" type="Node2D"]
script = ExtResource( 4 )

[node name="LeftWheel" type="Sprite" parent="."]
position = Vector2( 12, 32 )
scale = Vector2( 1.16667, 1.16667 )
texture = ExtResource( 2 )

[node name="RightWheel" type="Sprite" parent="."]
position = Vector2( 52, 33 )
scale = Vector2( 1.16667, 1.16667 )
texture = ExtResource( 2 )

[node name="MotorcycleFrameAndSoldier" type="Sprite" parent="."]
scale = Vector2( 1.38333, 1.38333 )
texture = ExtResource( 1 )
centered = false

[node name="MotorcycleSoldierArea" type="Area2D" parent="." groups=["MotorcycleSoldier"]]
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MotorcycleSoldierArea"]
position = Vector2( 32, 20 )
shape = SubResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
margin_top = 14.0
margin_right = 64.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifePoints" type="Label" parent="Control/CenterContainer"]
margin_right = 64.0
margin_bottom = 26.0
theme = SubResource( 4 )
text = "Lorem"
align = 1

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -12.381

[node name="Muzzle" type="Position2D" parent="." groups=["MotorcycleSoldier"]]
position = Vector2( -1, 14 )
rotation = 3.14159

[connection signal="area_entered" from="MotorcycleSoldierArea" to="." method="_on_MotorcycleSoldierArea_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
